--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,19 @@
 	</properties>
 
 	<dependencies>
+
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
+
+
         <!-- spring -->
         
         <dependency>
@@ -91,6 +104,8 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.37</version>
         </dependency>-->
+
+
 
  	</dependencies>
 </project>
